Fixed some spacing of the project images and links

--- a/src/components/Project/style.scss
+++ b/src/components/Project/style.scss
@@ -4,9 +4,10 @@
   width: 250%;
   display: flex;
   // justify-content: space-around;
+  justify-content: center;
   align-items: center;
   margin-bottom: -50px;
-
+  margin-left: -40px;
 }
 .projectImages {
   height: 300px;
@@ -30,7 +31,7 @@ h3 {
 .title1 {
   position: relative;
   color: #fff;
-  left: 23%;
+  left: 12%;
   width: 100px;
   font-size: 20px;
  
@@ -39,7 +40,7 @@ h3 {
 .title2 {
   position: relative;
   color: #fff;
-  left: 70%;
+  left: 60%;
   width: 150px;
   font-size: 20px;
   
@@ -47,7 +48,7 @@ h3 {
 .title3 {
   position: relative;
   color: #fff;
-  left: 115%;
+  left: 109%;
   width: 100px;
   font-size: 20px;
  
@@ -55,7 +56,7 @@ h3 {
 .title4 {
   position: relative;
   color: #fff;
-  left: 165%;
+  left: 163%;
   width: 100px;
   font-size: 20px;
   
